# schmix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  schmix.sln
assets/: .gitignore
assets/runtime/: .gitignore  placeholder.txt
managed/: Coral.Managed.csproj
managed/Schmix/: Mixer.cs  MonoSignal.cs  RefCounted.cs  Schmix.csproj  StereoSignal.cs  Test.cs
managed/Schmix.Example/: ConstantOutput.cs  Envelope.cs  Input.cs  Mixer.cs  Oscillator.cs  Output.cs  Schmix.Example.csproj  Sine.cs  SingleNoteMIDI.cs  Sound.cs  VCA.cs
managed/Schmix.Example/Waves/: IWaveform.cs  SineWave.cs
managed/Schmix/Algorithm/: DirectedAcyclicalGraph.cs  IGraph.cs
managed/Schmix/Audio/: AudioDevice.cs  EncodingStream.cs  IAudioInput.cs  IAudioOutput.cs  MIDI.cs  Mixer.cs  MonoSignal.cs  Note.cs  OutputDevice.cs  SignalInterfaces.cs  StereoSignal.cs  WindowAudioOutput.cs
managed/Schmix/Core/: Extensions.cs  Log.cs  Memory.cs  RefCounted.cs
managed/Schmix/Encoding/: CodecParameters.cs  CodecStream.cs  IO.cs
managed/Schmix/Extension/: Module.cs  Plugin.cs  RegisteredPluginAttribute.cs
managed/Schmix/UI/: Application.cs  Cable.cs  ImGuiInstance.cs  ModuleNode.cs  Node.cs  Rack.cs
managed/Schmix/assets/runtime/: Schmix.deps.json
src/: CMakeLists.txt  main.cpp  schmixpch.h
src/schmix/audio/: AudioDevice.cpp  AudioDevice.h  AudioOutput.cpp  AudioOutput.h  EncodingStream.cpp  EncodingStream.h  MIDI.cpp  MIDI.h  Mixer.cpp  Mixer.h  OutputDevice.cpp  OutputDevice.h  Signal.h  WindowAudioOutput.cpp  WindowAudioOutput.h
src/schmix/core/: Log.cpp  Log.h  Memory.cpp  Memory.h  Ref.h
src/schmix/encoding/: CodecParameters.cpp  CodecParameters.h  CodecStream.cpp  CodecStream.h  FFmpeg.h  FormatStream.cpp  FormatStream.h  IO.cpp  IO.h
src/schmix/script/: Bindings.cpp  Bindings.h  Plugin.cpp  Plugin.h  ScriptRuntime.cpp  ScriptRuntime.h
src/schmix/ui/: Application.cpp  Application.h  ImGuiInstance.cpp  ImGuiInstance.h  Window.cpp  Window.h
